--- a/wp-content/themes/ls-dev/assets/styles/common/_global.scss
+++ b/wp-content/themes/ls-dev/assets/styles/common/_global.scss
@@ -1,3 +1,4 @@
+
 .display-table{
   display: table;
   width: 100%;
@@ -6,6 +7,10 @@
     display: table-cell;
     vertical-align: middle;
   }
+}
+.background-img-center{
+  background-position: center center;
+  background-size: cover;
 }
 .full-size{
   position: relative;
